<resources>
    <string name="app_name">SQLite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category">Category</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add_product">Add Product</string>
</resources>